@@ -1,9 +1,8 @@
 ## Use the R_HOME indirection to support installations of multiple R version
 PKG_CPPFLAGS = -I../inst/include 
 PKG_CXXFLAGS = -DEIGEN_DONT_PARALLELIZE  $(SHLIB_OPENMP_CXXFLAGS)
-PKG_LIBS = `$(R_HOME)/bin/Rscript -e "Rcpp:::LdFlags()"` $(SHLIB_OPENMP_CXXFLAGS) 
 CXX_STD = CXX11
-PKG_LIBS = $(SHLIB_OPENMP_CFLAGS) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
+PKG_LIBS = $(SHLIB_OPENMP_CXXFLAGS) $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
 mrfDepth_FFLAGS = $(FPICFLAGS) $(SHLIB_FFLAGS)
 all: $(SHLIB)
 HalfSpaceDepthMedian.o: HalfSpaceDepthMedian.f
