@@ -3,11 +3,17 @@
 \encoding{UTF-8}
 
 
+\section{Changes in version 1.0.9 (2018-08-01)}{
+\itemize{
+    \item Change of maintainer.
+ }
+}
+
+
 \section{Changes in version 1.0.8 (2018-07-08)}{
 \itemize{
     \item BUGFIX: Componentwise option of Directional Outlylingness fixed
     \item Feature: Weighted sd implemented in FOM
-    \item MISC: Change of maintainer mail adress in preparation of affiliation change.
     \item MISC: Cleanup of C++ code for Directional Outlyingness
  }
 }
